# prediction-market-bot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  PredictionBot_Presentation.pptx  PredictionBot_User_Guide.pptx  Procfile  README.md  SHADOW_LOG.md  STUDY_GUIDE.md  botctl  package.json  pyproject.toml  quant_backtest.py  railway.toml  requirements.txt  scan_claude_code.py  scan_kalshi.py  scan_local.py  shadow_report.sh  vercel.json
.claude/: launch.json
bot/: analyzer.py  arbitrage.py  backtester.py  config.py  crypto_backtest.py  crypto_feed.py  database.py  draftkings_client.py  kalshi_client.py  main.py  models.py  notifier.py  performance.py  rf_model.py  risk_manager.py  server.py  strategy_backtest.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/public/: reports.html
frontend/src/: App.jsx  api.js  index.css  main.jsx
frontend/src/components/: Dashboard.jsx  Markets.jsx  Performance.jsx  Portfolio.jsx  Settings.jsx  Signals.jsx  Testing.jsx  Toast.jsx  Tooltip.jsx
supabase/: schema.sql
