[project]
name = "prediction-market-bot"
version = "0.1.0"
description = "AI-powered trading bot for Kalshi and DraftKings prediction markets"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "anthropic>=0.52",
    "cryptography>=43.0",
    "rich>=13.0",
    "apscheduler>=3.10",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "scikit-learn>=1.5",
    "numpy>=1.26",
]

[project.scripts]
trade = "bot.main:main"
